--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 repos:
-- repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.9
-  hooks:
-  - id: insert-license
-    name: Add license for all python files
-    exclude: ^(\.github|examples|swagger_client)/.*$
-    types: [python]
-    args:
-    - --comment-style
-    - "|#|"
-    - --license-filepath
-    - templates/LICENSE.txt
-    - --fuzzy-match-generates-todo
+#- repo: https://github.com/Lucas-C/pre-commit-hooks
+#  rev: v1.1.9
+#  hooks:
+#  - id: insert-license
+#    name: Add license for all python files
+#    exclude: ^(\.github|examples|swagger_client)/.*$
+#    types: [python]
+#    args:
+#    - --comment-style
+#    - "|#|"
+#    - --license-filepath
+#    - LICENSE
+#    - --fuzzy-match-generates-todo
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.0.1
   hooks:
