--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 repos:
-#- repo: https://github.com/Lucas-C/pre-commit-hooks
-#  rev: v1.1.9
-#  hooks:
-#  - id: insert-license
-#    name: Add license for all python files
-#    exclude: ^(\.github|examples|swagger_client)/.*$
-#    types: [python]
-#    args:
-#    - --comment-style
-#    - "|#|"
-#    - --license-filepath
-#    - LICENSE
-#    - --fuzzy-match-generates-todo
+- repo: https://github.com/Lucas-C/pre-commit-hooks
+  rev: v1.1.9
+  hooks:
+  - id: insert-license
+    name: Add license for all python files
+    exclude: ^(\.github|swagger_client)/.*$
+    types: [python]
+    args:
+    - --comment-style
+    - "|#|"
+    - --license-filepath
+    - templates/LICENSE.txt
+    - --fuzzy-match-generates-todo
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.0.1
   hooks:
@@ -19,26 +19,34 @@ repos:
   - id: debug-statements
   - id: end-of-file-fixer
   - id: trailing-whitespace
+    exclude: ^swagger_client/
 - repo: https://github.com/PyCQA/flake8
   rev: 3.9.2
   hooks:
   - id: flake8
     exclude: '^swagger_client/'
+    args:
+      - "--max-line-length=120"
 - repo: https://github.com/PyCQA/isort
   rev: 5.12.0
   hooks:
   - id: isort
+    exclude: ^swagger_client/
     args: ["--profile", "black"]
 - repo: https://github.com/psf/black
   rev: 22.3.0
   hooks:
   - id: black
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.2.0
-  hooks:
-  - id: mypy
-    exclude: '^swagger_client/'
-    additional_dependencies:
-    - 'sqlalchemy[mypy]==2.0.9'
-    - 'types-python-dateutil'
-    - 'types-six'
+    exclude: ^swagger_client/
+#- repo: https://github.com/pre-commit/mirrors-mypy
+#  rev: v1.2.0
+#  hooks:
+#  - id: mypy
+#    exclude: ^swagger_client/
+#    args:
+#      - "--ignore-missing-imports"
+#    additional_dependencies:
+#      - 'sqlalchemy[mypy]'
+#      - 'types-python-dateutil'
+#      - 'types-six'
+#      - 'types-urllib3'
